objects/Custom_by_ramya__c.object
<CustomObject>
    <fields>
        <fullName>Custom_Text__c</fullName>
        <label>Custom Text</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_phone__c</fullName>
        <label>Custom phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Time_period__c</fullName>
        <label>Time period</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1 month</fullName>
                </value>
                <value>
                    <fullName>2 months</fullName>
                </value>
                <value>
                    <fullName>4 months</fullName>
                </value>
                <value>
                    <fullName>6 months</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Custom by ramya</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Custom by ramya Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom by ramyas</pluralLabel>
    <recordTypes>
        <fullName>Custom_record_type</fullName>
        <active>true</active>
        <label>Custom record type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>